[package]
name = "umbral-patch"
version = "0.2.0"
edition = "2024"
description = "A BPS/IPS/UPS patcher for rust"
repository = "https://github.com/umbral-software/umbral-patcher"
license = "MIT"

[dependencies]
byteorder = "1.5"
crc = "3.4"
smallvec = { version = "1.15", features = ["const_generics", "union"] }
